added details - venue show (next: image gallery)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1245,6 +1245,9 @@ color: $white;
   font-size: 0.9em;
 }
 
+.panel-show > .panel-body > .panel-col > p{
+  font-size: 0.9em; 
+}
 
 @media (min-width: 767px){
 
