--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -130,7 +130,7 @@
           </div>
 
           <div class="col-xs-6 left-padding">
-            <img src="http://placekitten.com/200/150">
+            <img src="http://placehold.it/200x150">
           </div>
 
         </div><!--panel row-->
@@ -153,14 +153,20 @@
         <div class="panel-body">
 
         <div class="col-xs-12 panel-row no-padding">
+          <div id="links">
+              <div class="col-xs-6 right-padding">
+                  <a href="http://placekitten.com/640/480" title="Room 1" data-gallery>
+                      <img src="http://placekitten.com/200/150" alt="Room 1">
+                  </a>
+              </div>
 
-          <div class="col-xs-6 right-padding">
-            <img src="http://placekitten.com/200/150">
-          </div>
+              <div class="col-xs-6 left-padding">
+                <a href="http://placehold.it/640x480" title="Room 2" data-gallery>
+                    <img src="http://placehold.it/200x150" alt="Room 2">
+                </a>
 
-          <div class="col-xs-6 left-padding">
-            <img src="http://placekitten.com/200/150">
-          </div>
+              </div>
+          </div>          
 
         </div><!--panel row-->
 
@@ -178,3 +184,38 @@
 
 
 </div><!--container-->
+
+<!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
+<div id="blueimp-gallery" class="blueimp-gallery">
+    <!-- The container for the modal slides -->
+    <div class="slides"></div>
+    <!-- Controls for the borderless lightbox -->
+    <h3 class="title"></h3>
+    <a class="prev">‹</a>
+    <a class="next">›</a>
+    <a class="close">×</a>
+    <a class="play-pause"></a>
+    <ol class="indicator"></ol>
+    <!-- The modal dialog, which will be used to wrap the lightbox content -->
+    <div class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body next"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default pull-left prev">
+                        <i class="glyphicon glyphicon-chevron-left"></i>
+                        Previous
+                    </button>
+                    <button type="button" class="btn btn-primary next">
+                        Next
+                        <i class="glyphicon glyphicon-chevron-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
