--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="col-md-12 col-xs-12 no-padding">
 
-    <div class="col-xs-4 show-box no-padding"> 
+    <div class="col-md-4 show-box no-padding"> 
 
       <div class="classification">
         <span><%= @venue.classification %></span>
@@ -20,11 +20,9 @@
         </p>
       </div> <!--name-->
 
-      <div class="numbers">
-      </div>
     </div><!--col-->
 
-    <div class="col-xs-8 no-padding">
+    <div class="col-md-8 no-padding">
         <img src="http://placekitten.com/620/300" class="img-responsive">
     </div><!--col-->
 
