--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,7 +1,7 @@
-<div class="container dashboard-wrapper">
+<div class="container">
 
   <div class="col-md-12">
-    <div class="dash panel panel-dash">
+    <div class="dash panel-dash">
       <div class="panel-heading col-xs-12">
         <div class="col-xs-8">
           <i class="fa fa-location-arrow fa-2x"></i>
@@ -13,29 +13,35 @@
         </div>
       </div>
       <div class="panel-body">
+      <dl>
         <% @venues.each do |venue|  %>
-        <div class = "col-xs-4 no-pads">
+       
         
-          <div class="dashboard-card-frame">
+          <dt class="card-frame">
+
+            <div class="card-label"><%= venue.classification %></div>
+            
             <% if venue.assets.count > 0 %>
-            <%= image_tag (Venue.find(venue.id).assets.last.photo.url(:index)), class: "dashboard-card-image" %>
-            <% else %>
-            <img src="http://placehold.it/300x200" class="dashboard-card-image">
-            <% end %>
+                <%= image_tag (Venue.find(venue.id).assets.last.photo.url(:index)), class: "card-image" %>
+                <% else %>
+                <img src="http://placehold.it/250x200" class="card-image">
+             <% end %>
 
-            <div class="dashboard-card-caption">
-              <div class="dashboard-card-name"><%= link_to "#{venue.name}".html_safe, venue_path(venue.id) %> </div>
+            <div class="card-name"><%= link_to "#{venue.name}".html_safe, venue_path(venue.id) %> </div>  
 
+            <div class="card-action">
               <%= link_to '<i class="fa fa-arrow-circle-right" style="margin-right: 0.6em;"></i>'.html_safe, venue_path(venue.id) %> 
               <%= link_to '<i class="fa fa-pencil-square-o" style="margin-right: 0.6em;"></i>'.html_safe, edit_venue_path(venue.id) %> 
               <%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, venue_path(venue.id), method: :delete, confirm: "Are you sure you want to delete this venue?"%>
-              
+
             </div>
 
-          </div><!--venue frame-->
 
-        </div><!--col-->
+          </dt><!--card frame-->
+
+        
         <% end %>  
+      </dl>
       </div><!--panel-body--> 
     </div><!--end panel-->
   </div>
