--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1161,18 +1161,38 @@ tr#last >td{
 
 dt.card-frame{
   float: left;
-  width: 30%;
   background-color: $white;
   padding: 0.75em;
   margin: 1em;
 }
 
 
-dt:nth-of-type(3n+1){
-  clear: left;
-}
 
 dt > .card-image{
   max-width: 100%;
 }
 
+@media (min-width: 960px){
+
+  dt.card-frame{
+    width: 30%;
+  }
+
+  dt:nth-of-type(3n+1){
+    clear: left;
+  }
+
+}
+
+
+@media (max-width: 700px) and (min-device-width: 320px) {
+
+  dt.card-frame{
+    width: 45%;
+    margin: 0.75em;
+  }
+  dt:nth-of-type(2n+1){
+    clear: left;
+  }
+
+}
