--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -203,6 +203,7 @@ h1, h2, h3 {
   margin-bottom: 0;
 	border-radius: 0px;
   min-height: 200px;
+  border: 0;
 }
 
 .panel > #body-bookings{
@@ -962,10 +963,12 @@ tr#last >td{
   background-color: rgb(181, 237, 118);
 }
 
-
+.panel-dash > #body-bookings {
+  padding-bottom: 0.6em;
+}
 .panel-dash > .panel-body > .bookings-div{
   color: rgba(158,158,158,0.9);
-  padding: 1em 1.5em ;
+  padding: 1em 1.5em;
   background-color: rgba(232, 232, 225,0.2);
 
   transition: all 0.2s ease;
@@ -973,8 +976,10 @@ tr#last >td{
   -moz-transition: all 0.2s ease;
   -webkit-transition: all 0.2s ease;
 
-  border-bottom: 1px solid #ccc;
+}
 
+.panel-dash > .panel-body > .bookings-div:nth-of-type(2n){
+  background-color: rgba(59,59,59,0.1);
 }
 
 .panel-dash > .panel-heading > div > span {
