--- a/app/views/pages/_supplier.html.erb
+++ b/app/views/pages/_supplier.html.erb
@@ -35,83 +35,204 @@
   </div>
 </div><!--group-->
 
+ <div class="col-md-6" style="margin-bottom:2em">
+    <div class="panel dash panel-dash">
+      <div class="panel-heading col-xs-12">
+        <div class="col-xs-8">
+          <i class="fa fa-bookmark fa-2x"></i> 
+          <span class="announcement-heading"> Recent Bookings</span>
+        </div>
+      </div>
+
+      <div class="panel-body" id ="body-bookings">
+
+		<div class="col-xs-12 bookings-div">
+
+		    <div class="col-xs-8 no-pads-really">
+		      <i class="fa fa-user"></i>&nbsp; Francis Bautista
+		    </div>
+
+		    <div class="col-xs-4 no-pads-really bookings-place text-right">
 
 
+		    <span class="label label-light-gray booker-name">Hogwarts </span>
+
+		    <div class="bookings-action">
+		      <i class="fa fa-check fa-lg fa-orange"></i>
+		      <i class="fa fa-trash-o fa-lg fa-orange"></i>
+		    </div>
+		    
+		    </div>
+
+		</div><!--booking-div-->
+
+		<div class="col-xs-12 bookings-div">
+
+		    <div class="col-xs-8 no-pads-really">
+		      <i class="fa fa-user"></i>&nbsp; Eyana Mallari
+		    </div>
+
+		    <div class="col-xs-4 no-pads-really bookings-place text-right">
 
 
-<div class="col-md-12" style="margin-bottom:2em">
-<div class="panel dash panel-dash">
-  <div class="panel-heading col-xs-12">
-    <div class="col-xs-8">
-      <i class="fa fa-bookmark fa-2x"></i> 
-      <span class="announcement-heading"> Recent Pencil Bookings</span>
-    </div>
-  </div>
+		    <span class="label label-light-gray booker-name">Hogwarts </span>
 
-  <div class="panel-body" id ="body-bookings">
+		    <div class="bookings-action">
+		      <i class="fa fa-check fa-lg fa-orange"></i>
+		      <i class="fa fa-trash-o fa-lg fa-orange"></i>
+		    </div>
+		    
+		    </div>
 
-  <div class="col-xs-12 bookings-div">
-    <div class="col-xs-8 no-pads-really">
-      <i class="fa fa-user"></i>&nbsp; Francis Bautista
-    </div>
+		</div><!--booking-div-->
 
-    <div class="col-xs-4 no-pads-really bookings-place text-right">
+		<div class="col-xs-12 bookings-div">
 
+		    <div class="col-xs-8 no-pads-really">
+		      <i class="fa fa-user"></i>&nbsp; Angelo Francisco
+		    </div>
 
-    <span class="label label-light-gray booker-name">Hogwarts </span>
-
-    <div class="bookings-action">
-      <i class="fa fa-check fa-lg fa-orange"></i>
-      <i class="fa fa-trash-o fa-lg fa-orange"></i>
-    </div>
-    
-    </div>
-
-  </div><!--booking-div-->
-  
-
-  <div class="col-xs-12 bookings-div">
-    <div class="col-xs-8 no-pads-really">
-      <i class="fa fa-user"></i>&nbsp; Francis Bautista
-    </div>
-
-    <div class="col-xs-4 no-pads-really bookings-place text-right">
+		    <div class="col-xs-4 no-pads-really bookings-place text-right">
 
 
-    <span class="label label-light-gray booker-name">Hogwarts </span>
+		    <span class="label label-light-gray booker-name">Hogwarts </span>
 
-    <div class="bookings-action">
-      <i class="fa fa-check fa-lg fa-orange"></i>
-      <i class="fa fa-trash-o fa-lg fa-orange"></i>
-    </div>
-    
-    </div>
+		    <div class="bookings-action">
+		      <i class="fa fa-check fa-lg fa-orange"></i>
+		      <i class="fa fa-trash-o fa-lg fa-orange"></i>
+		    </div>
+		    
+		    </div>
 
-  </div><!--booking-div-->
-  <div class="col-xs-12 bookings-div">
-    <div class="col-xs-8 no-pads-really">
-      <i class="fa fa-user"></i>&nbsp; Tori Tadiar
-    </div>
+		</div><!--booking-div-->
 
-    <div class="col-xs-4 no-pads-really bookings-place text-right">
+		<div class="col-xs-12 bookings-div">
+
+		    <div class="col-xs-8 no-pads-really">
+		      <i class="fa fa-user"></i>&nbsp; Tori Tadiar
+		    </div>
+
+		    <div class="col-xs-4 no-pads-really bookings-place text-right">
 
 
-    <span class="label label-light-gray booker-name">Hogwarts </span>
+		    <span class="label label-light-gray booker-name">Hogwarts </span>
 
-    <div class="bookings-action">
-      <i class="fa fa-check fa-lg fa-orange"></i>
-      <i class="fa fa-trash-o fa-lg fa-orange"></i>
-    </div>
-    
-    </div>
+		    <div class="bookings-action">
+		      <i class="fa fa-check fa-lg fa-orange"></i>
+		      <i class="fa fa-trash-o fa-lg fa-orange"></i>
+		    </div>
+		    
+		    </div>
 
-  </div><!--booking-div-->
-  
+		</div><!--booking-div-->
 
-    
-</div><!--end body-->
-</div><!--end panel-->
+		</div><!--panel body-->
+
+	</div><!--end panel-->
 </div>
+
+<div class="col-md-6" style="margin-bottom:2em">
+    <div class="panel dash panel-dash">
+      <div class="panel-heading col-xs-12">
+        <div class="col-xs-8">
+          <i class="fa fa-bookmark fa-2x"></i> 
+          <span class="announcement-heading">Upcoming Events</span>
+        </div>
+      </div>
+
+      <div class="panel-body" id ="body-bookings">
+
+		<div class="col-xs-12 bookings-div">
+
+		    <div class="col-xs-8 no-pads-really">
+		      Francis' Mandebut<br>
+		      <small>July 2, 2014 (Wednesday)</small>
+		    </div>
+
+		    <div class="col-xs-4 no-pads-really bookings-place text-right">
+
+
+		    <span class="label label-light-gray booker-name">SM Megamall </span>
+
+		    <div class="bookings-action">
+		      <i class="fa fa-check fa-lg fa-orange"></i>
+		      <i class="fa fa-trash-o fa-lg fa-orange"></i>
+		    </div>
+		    
+		    </div>
+
+		</div><!--booking-div-->
+
+		<div class="col-xs-12 bookings-div">
+
+		    <div class="col-xs-8 no-pads-really">
+		      Eyana Mallari's Wedding<br>
+		      <small>July 2, 2014 (Wednesday)</small>
+		    </div>
+
+		    <div class="col-xs-4 no-pads-really bookings-place text-right">
+
+
+		    <span class="label label-light-gray booker-name">Tuscany, Italy</span>
+
+		    <div class="bookings-action">
+		      <i class="fa fa-check fa-lg fa-orange"></i>
+		      <i class="fa fa-trash-o fa-lg fa-orange"></i>
+		    </div>
+		    
+		    </div>
+
+		</div><!--booking-div-->
+
+		<div class="col-xs-12 bookings-div">
+
+		    <div class="col-xs-8 no-pads-really">
+		      Angelo Francisco's Despedida<br>
+		      <small>July 2, 2014 (Wednesday)</small>
+		    </div>
+
+		    <div class="col-xs-4 no-pads-really bookings-place text-right">
+
+
+		    <span class="label label-light-gray booker-name">Prive Luxury Club</span>
+
+		    <div class="bookings-action">
+		      <i class="fa fa-check fa-lg fa-orange"></i>
+		      <i class="fa fa-trash-o fa-lg fa-orange"></i>
+		    </div>
+		    
+		    </div>
+
+		</div><!--booking-div-->
+
+		<div class="col-xs-12 bookings-div">
+
+		    <div class="col-xs-8 no-pads-really">
+		      Tori Tadiar's Baptism <br>
+		      <small>July 2, 2014 (Wednesday)</small>
+
+		    </div>
+
+		    <div class="col-xs-4 no-pads-really bookings-place text-right">
+
+
+		    <span class="label label-light-gray booker-name">Gesu Chapel</span>
+
+		    <div class="bookings-action">
+		      <i class="fa fa-check fa-lg fa-orange"></i>
+		      <i class="fa fa-trash-o fa-lg fa-orange"></i>
+		    </div>
+		    
+		    </div>
+
+		</div><!--booking-div-->
+
+		</div><!--panel body-->
+
+	</div><!--end panel-->
+</div>
+
+
 
 
 <div class="col-md-12 no-padding">
@@ -138,7 +259,7 @@
             <% if venue.assets.count > 0 %>
                 <%= image_tag (Venue.find(venue.id).assets.last.photo.url(:index)), class: "card-image" %>
                 <% else %>
-                <img src="http://placekitten.com/250/200" class="card-image">
+                <img src="http://placekitten.com/250/220" class="card-image">
              <% end %>
 
             <div class="card-name"><%= link_to "#{venue.name}".html_safe, venue_path(venue.id) %> </div>  
