--- a/app/views/pages/_user.html.erb
+++ b/app/views/pages/_user.html.erb
@@ -1,94 +1,128 @@
-<div class="col-md-12 col-xs-12">
-
-  <div class="col-xs-12 dashboard-flash-group">
-    <div class="alert alert-info">
-
-    <div class="col-sm-11">
-    Your pencil booking for <strong>Irwin Theater</strong> has been approved!
-    </div>
-    <div>
-      <i class="fa fa-mobile" style="margin-right: 0.5em; font-size:1.5em"></i>
-      <i class="fa fa-arrow-right" style="font-size:1.5em;"></i>
-    </div><!--text-right-->
-    </div><!--alert-->
-
-  </div><!--group-->
 
 
+<div class="col-md-12 dashboard-flash-group">
+  <div class="alert alert-info">
 
+  <div class="col-sm-11">
+  Your pencil booking for <strong>Irwin Theater</strong> has been approved!
+  </div>
+  <div>
+    <i class="fa fa-mobile" style="margin-right: 0.5em; font-size:1.5em"></i>
+    <i class="fa fa-arrow-right" style="font-size:1.5em;"></i>
+  </div><!--text-right-->
+  </div><!--alert-->
 
-  <div class="col-md-12">
+</div><!--group-->
+
+<div class="col-md-6" style="margin-bottom:2em">
     <div class="panel dash panel-dash">
-      <div class="panel-heading">
-        <i class="fa fa-bookmark fa-2x"></i> 
-        <span class="announcement-heading"> Approved Bookings
-        </span>
-
+      <div class="panel-heading col-xs-12">
+        <div class="col-xs-8">
+          <i class="fa fa-bookmark fa-2x"></i> 
+          <span class="announcement-heading">Recent Activities</span>
+        </div>
       </div>
 
-    <div class="panel-body">
+      <div class="panel-body" id ="body-bookings">
 
-      <div class = "col-xs-4 no-pads">
-        <div class="dashboard-card-frame">
-   
+        <div class="col-xs-12 bookings-div">
 
-          <img src="http://placehold.it/300x200" class="dashboard-card-image">
-       
+            <div class="col-xs-8 no-pads-really">
+              <strong>Max' Restaurant</strong> <br>
+              <small> Francis' Debut <br> July 2, 2014 (Wednesday)</small>
+            </div>
 
-          <div class="dashboard-card-caption">
-            <div class="dashboard-card-name">Irwin Theater
-             </div>
-             <div class="dashboard-card-details">
-              June 24, 2014<br>
-             1:00PM to 2:00PM<br>
-              <i class="fa fa-trash-o" style="color: rgb(255, 103, 89); margin-right: 0.5em;"></i>
-               <i class="fa fa-mobile"  style="margin-right: 0.5em;"></i>
-               <i class="fa fa-arrow-right" ></i>
-             </div><!--details-->
+            <div class="col-xs-4 no-pads-really bookings-place text-right">
+
+
+            <span class="label label-light-gray booker-name">Pencil-Booked</span>
+
+            <div class="bookings-action">
+              <i class="fa fa-check fa-lg fa-orange"></i>
+              <i class="fa fa-trash-o fa-lg fa-orange"></i>
+            </div>
             
-          </div>
+            </div>
 
-        </div><!--venue frame-->
-      </div><!--col-->
+        </div><!--booking-div-->
 
-      <div class = "col-xs-4 no-pads">
-        <div class="dashboard-card-frame">
-   
+        <div class="col-xs-12 bookings-div">
 
-          <img src="http://placehold.it/300x200" class="dashboard-card-image">
-       
+            <div class="col-xs-8 no-pads-really">
+              <strong>Santorini, Greece</strong> <br>
+              <small> Eyana's Wedding <br> July 2, 2014 (Wednesday)</small>
+            </div>
 
-          <div class="dashboard-card-caption">
-            <div class="dashboard-card-name" id="users">Irwin Theater
-             </div>
-             <div class="dashboard-card-details">
-              June 24, 2014<br>
-             1:00PM to 2:00PM<br>
-              <i class="fa fa-trash-o" style="color: rgb(255, 103, 89); margin-right: 0.5em;"></i>
-               <i class="fa fa-mobile"  style="margin-right: 0.5em;"></i>
-               <i class="fa fa-arrow-right" ></i>
-             </div><!--details-->
+            <div class="col-xs-4 no-pads-really bookings-place text-right">
+
+
+            <span class="label label-light-gray booker-name">Canceled Reservation</span>
+
+            <div class="bookings-action">
+              <i class="fa fa-check fa-lg fa-orange"></i>
+              <i class="fa fa-trash-o fa-lg fa-orange"></i>
+            </div>
             
-          </div>
+            </div>
 
-        </div><!--venue frame-->
-      </div><!--col-->
+        </div><!--booking-div-->
+
        
-    </div><!--panel-body--> 
+
+
+    </div><!--panel body-->
+
   </div><!--end panel-->
 </div>
 
-
-
-<div class="col-md-12">
-  <div class="panel dash panel-dash">
-    <div class="panel-heading">
-      <i class="fa fa-map-marker fa-2x"></i>
-      <span class="announcement-heading">Pencil-Booked Rooms
+<div class="col-md-6 no-padding">
+  <div class="dash panel-dash">
+    <div class="panel-heading col-xs-12">
+      <div class="col-xs-8">
+        <i class="fa fa-location-arrow fa-2x"></i>
+        <span class="announcement-heading">Approved Bookings</span>
+      </div> 
     </div>
+      <div class="panel-body">
+      <dl> 
+          <dt class="card-frame" id="card-user">
 
+            <div class="card-label">Restaurant</div>
+                <img src="http://placekitten.com/250/220" class="card-image">
+
+            <div class="card-name"><a href="">Sonya's Garden</a> </div>  
+
+            <div class="card-action text-right" id="card-user">
+            Tori's Wedding<br>
+            July 25, 2014 (Sat), 1-6PM
+            </div>
+
+
+          </dt><!--card frame-->
+
+          <dt class="card-frame" id="card-user">
+
+            <div class="card-label">Bar</div>
+                <img src="http://placekitten.com/250/220" class="card-image">
+
+            <div class="card-name"><a href="">Prive Luxury Bar</a> </div>  
+
+            <div class="card-action text-right" id="card-user">
+            Angelo's Boys Night Out<br>
+            July 25, 2014 (Sat), 1-6PM
+            </div>
+
+
+          </dt><!--card frame-->
+      </dl>
+      </div><!--panel-body--> 
   </div><!--end panel-->
 </div>
 
-</div><!--first col-->
+
+
+
+
+
+
 
